--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-This GitHub action can publish assets for release when a tag is created.
+# This GitHub action can publish assets for release when a tag is created.
 # Currently its setup to run on any tag that matches the pattern "v*" (ie. v0.1.0).
 #
 # This uses an action (hashicorp/ghaction-import-gpg) that assumes you set your
