Add terraform version to userAgent header (#4)
Co-authored-by: John Paul Ashenfelter <john@ashenfelter.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-.vscode
 .terraform
 crash.log
 examples/terraform.tfstate
 **/*/*.tfstate.backup
 dist/
 terraform-provider-firehydrant
+.tool-versions
