Improvements to building provider for local development
* Add makefile target for local builds and corresponding directory
* Add local examples directory
* Ignore local files for git
* Add a dev_terraformrc example file
* Update the README with dev workflow:

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-.terraform
-crash.log
-examples/terraform.tfstate
-**/*/*.tfstate.backup
 dist/
-terraform-provider-firehydrant
-.tool-versions
+local/bin/terraform-provider-firehydrant
+local/examples/**/*
