--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-.terraform
-crash.log
-examples/terraform.tfstate
-**/*/*.tfstate.backup
 dist/
-terraform-provider-firehydrant
-.tool-versions
-.idea
+local/bin/terraform-provider-firehydrant
+local/examples/**/*
