--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -53,5 +53,5 @@ release:
   # If you want to manually examine the release before its live, uncomment this line:
   # draft: true
 changelog:
-  skip: true
+  disable: true
 
