--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ on:
   push:
     branches:
       - 'main'
-  pull_request:
-    branches:
-      - '*'
+  pull_request_target:
+    types: [opened, synchronize]
+    branches: ['*']
 jobs:
   build:
     runs-on: ubuntu-latest
